--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -411,25 +411,41 @@ jobs:
           build-args: |
             SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
 
-      - name: Upload Docker image to ECR
+
+      - name: Push to ECR
         if: |
           github.ref == 'refs/heads/develop' ||
           github.ref == 'refs/heads/main'    ||
           startsWith(github.ref, 'refs/heads/release') ||
           github.event.head_commit.message == '/deploy sit' ||
           github.event.head_commit.message == '/deploy uat'
-        uses: vitr/actions-build-and-upload-to-ecs@master
+        uses: jwalton/gh-ecr-push@v1
         with:
           access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
           secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          repo: podaac/tig
           region: us-west-2
-          tags: ${{ env.the_version }}
-          create_repo: true
-          dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: |
-            SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
+          local-image: ${{ env.IMAGE_NAME }}
+          image: ${{ env.IMAGE_NAME }}:${{ env.new_version }}          
+
+      # - name: Upload Docker image to ECR
+      #   if: |
+      #     github.ref == 'refs/heads/develop' ||
+      #     github.ref == 'refs/heads/main'    ||
+      #     startsWith(github.ref, 'refs/heads/release') ||
+      #     github.event.head_commit.message == '/deploy sit' ||
+      #     github.event.head_commit.message == '/deploy uat'
+      #   uses: vitr/actions-build-and-upload-to-ecs@master
+      #   with:
+      #     access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+      #     secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+      #     account_id: ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+      #     repo: podaac/tig
+      #     region: us-west-2
+      #     tags: ${{ env.the_version }}
+      #     create_repo: true
+      #     dockerfile: ./docker/lambdaDockerfile
+      #     extra_build_args: |
+      #       SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
       # #########################################################################
       # # Build and Publish Documentation
       # #########################################################################
