updated logic for versioning

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -421,8 +421,8 @@ jobs:
           github.event.head_commit.message == '/deploy uat'
         uses: jwalton/gh-ecr-push@v1
         with:
-          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          access-key-id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          secret-access-key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
           region: us-west-2
           local-image: ${{ env.IMAGE_NAME }}
           image: ${{ env.IMAGE_NAME }}:${{ env.new_version }}          
