--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -354,6 +354,7 @@ jobs:
       # Build and Publish Docker Container
       #########################################################################
       # Setup docker to build and push images
+      ## Build and publish to GHCR
       - name: Log in to the Container registry
         if: |
           steps.pypi-test-publish.conclusion == 'success' ||
@@ -411,8 +412,7 @@ jobs:
           build-args: |
             SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
 
-
-
+      ## Build and publish to ECR
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -427,47 +427,13 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: podaac/forge
+          ECR_REPOSITORY: podaac/tig
           IMAGE_TAG: ${{ env.new_version }}
         run: |
           cd docker
           docker build -f lambdaDockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg SOURCE=${{ env.pyproject_name }}==${{ env.the_version }} .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-
-      # - name: Push to ECR
-      #   if: |
-      #     github.ref == 'refs/heads/develop' ||
-      #     github.ref == 'refs/heads/main'    ||
-      #     startsWith(github.ref, 'refs/heads/release') ||
-      #     github.event.head_commit.message == '/deploy sit' ||
-      #     github.event.head_commit.message == '/deploy uat'
-      #   uses: jwalton/gh-ecr-push@v1
-      #   with:
-      #     access-key-id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-      #     secret-access-key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-      #     region: us-west-2
-      #     image: ${{ env.IMAGE_NAME }}:${{ env.new_version }}          
-
-      # - name: Upload Docker image to ECR
-      #   if: |
-      #     github.ref == 'refs/heads/develop' ||
-      #     github.ref == 'refs/heads/main'    ||
-      #     startsWith(github.ref, 'refs/heads/release') ||
-      #     github.event.head_commit.message == '/deploy sit' ||
-      #     github.event.head_commit.message == '/deploy uat'
-      #   uses: vitr/actions-build-and-upload-to-ecs@master
-      #   with:
-      #     access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-      #     secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-      #     account_id: ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
-      #     repo: podaac/tig
-      #     region: us-west-2
-      #     tags: ${{ env.the_version }}
-      #     create_repo: true
-      #     dockerfile: ./docker/lambdaDockerfile
-      #     extra_build_args: |
-      #       SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
       # #########################################################################
       # # Build and Publish Documentation
       # #########################################################################
@@ -515,61 +481,3 @@ jobs:
       #   run: |
       #     poetry publish
 
-      # #########################################################################
-      # # Build and Publish Docker Container
-      # #########################################################################
-      # - name: Log in to the Container registry
-      #   if: |
-      #     steps.pypi-test-publish.conclusion == 'success' ||
-      #     steps.pypi-publish.conclusion == 'success'
-      #   uses: docker/login-action@v1
-      #   with:
-      #     registry: ${{ env.REGISTRY }}
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Extract metadata (tags, labels) for Docker
-      #   if: |
-      #     steps.pypi-test-publish.conclusion == 'success' ||
-      #     steps.pypi-publish.conclusion == 'success'
-      #   id: meta
-      #   uses: docker/metadata-action@v4
-      #   with:
-      #     images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      #     tags: |
-      #       type=semver,pattern={{version}},value=${{ env.software_version }}
-      #       type=raw,value=${{ env.venue }}
-      # - name: Wait for package
-      #   if: |
-      #     steps.pypi-test-publish.conclusion == 'success' ||
-      #     steps.pypi-publish.conclusion == 'success'
-      #   run: |
-      #     pip install tenacity
-      #     ${GITHUB_WORKSPACE}/.github/workflows/wait-for-pypi.py ${{env.pyproject_name}}[harmony]==${{ env.software_version }}
-      # - name: Build and push Docker image
-      #   if: |
-      #     steps.pypi-test-publish.conclusion == 'success' ||
-      #     steps.pypi-publish.conclusion == 'success'
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     context: .
-      #     file: docker/Dockerfile
-      #     build-args: |
-      #       SOURCE=${{env.pyproject_name}}[harmony]==${{ env.software_version }}
-      #     push: true
-      #     pull: true
-      #     tags: ${{ steps.meta.outputs.tags }}
-      #     labels: ${{ steps.meta.outputs.labels }}
-      # - name: Run Snyk on Docker Image
-      #   if: |
-      #     steps.pypi-test-publish.conclusion == 'success' ||
-      #     steps.pypi-publish.conclusion == 'success'
-      #   # Snyk can be used to break the build when it detects vulnerabilities.
-      #   # In this case we want to upload the issues to GitHub Code Scanning
-      #   continue-on-error: true
-      #   uses: snyk/actions/docker@master
-      #   env:
-      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      #   with:
-      #     image: ${{ steps.meta.outputs.tags[0] }}
-      #     args: >
-      #       --severity-threshold=high
