--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -298,7 +298,7 @@ jobs:
       - name: Upload Release Artifacts
         uses: ncipollo/release-action@v1.12.0
         with:
-          tag: ${{ env.the_version }}
+          tag: ${{ env.new_version }}
           artifacts: "*.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
 
