--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -330,10 +330,7 @@ jobs:
         id: pypi-test-publish
         if: |
           github.ref == 'refs/heads/develop' ||
-          startsWith(github.ref, 'refs/heads/release') ||
-          github.event.head_commit.message == '/deploy sit' ||
-          github.event.head_commit.message == '/deploy uat' ||
-          github.event.head_commit.message == '/deploy sandbox'
+          startsWith(github.ref, 'refs/heads/release')
         env:
           POETRY_PYPI_TOKEN_TESTPYPI: ${{secrets.TEST_PYPI_API_TOKEN}}
         run: |
@@ -429,10 +426,7 @@ jobs:
         if: |
           github.ref == 'refs/heads/develop' ||
           github.ref == 'refs/heads/main'    ||
-          startsWith(github.ref, 'refs/heads/release') ||
-          github.event.head_commit.message == '/deploy sit' ||
-          github.event.head_commit.message == '/deploy uat' ||
-          github.event.head_commit.message == '/deploy sandbox'
+          startsWith(github.ref, 'refs/heads/release')
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -450,9 +444,7 @@ jobs:
         if: |
           github.ref == 'refs/heads/develop' ||
           github.ref == 'refs/heads/main'    ||
-          startsWith(github.ref, 'refs/heads/release') ||
-          github.event.head_commit.message == '/deploy sit' ||
-          github.event.head_commit.message == '/deploy uat'
+          startsWith(github.ref, 'refs/heads/release')
         uses: vitr/actions-build-and-upload-to-ecs@master
         with:
           access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
@@ -471,7 +463,69 @@ jobs:
         if: |
           github.ref == 'refs/heads/develop' ||
           github.ref == 'refs/heads/main'    ||
-          startsWith(github.ref, 'refs/heads/release') ||
+          startsWith(github.ref, 'refs/heads/release')
+        uses: vitr/actions-build-and-upload-to-ecs@master
+        with:
+          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          repo: podaac/tig
+          region: us-west-2
+          tags: ${{ env.the_version }}
+          create_repo: true
+          dockerfile: ./docker/lambdaDockerfile
+          extra_build_args: --build-arg SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
+
+
+    ## Local tig docker builds
+
+      - name: Build Local TIG and push Docker image
+        if: |
+          github.event.head_commit.message == '/deploy sit' ||
+          github.event.head_commit.message == '/deploy uat' ||
+          github.event.head_commit.message == '/deploy sandbox'
+        run: |
+          local_tig=$(find dist -type f -name "*.whl")
+          echo "local_tig=${local_tig}" >> $GITHUB_ENV
+
+
+      - name: Build Local TIG and push Docker image
+        if: |
+          github.event.head_commit.message == '/deploy sit' ||
+          github.event.head_commit.message == '/deploy uat' ||
+          github.event.head_commit.message == '/deploy sandbox'
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./docker/lambdaDockerfile
+          push: true
+          pull: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          extra_build_args: --build-arg DIST_PATH="dist/" --build-arg SOURCE=${{ env.local_tig }}
+
+
+      ## Build and publish to Service ECR
+      - name: Upload Local TIG Docker image to Service ECR
+        if: |
+          github.event.head_commit.message == '/deploy sit' ||
+          github.event.head_commit.message == '/deploy uat'
+        uses: vitr/actions-build-and-upload-to-ecs@master
+        with:
+          access_key_id: ${{ secrets[format('AWS_ACCESS_KEY_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          secret_access_key: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          account_id: ${{ secrets[format('AWS_ACCOUNT_ID_SERVICES_{0}', env.TARGET_ENV_UPPERCASE)] }}
+          repo: podaac/tig
+          region: us-west-2
+          tags: ${{ env.the_version }}
+          create_repo: true
+          dockerfile: ./docker/lambdaDockerfile
+          extra_build_args: --build-arg DIST_PATH="dist/= --build-arg SOURCE=${{ env.local_tig }}
+
+
+      ## Build and publish to Cumulus ECR
+      - name: Upload Local TIG Docker image to Cumulus ECR
+        if: |
           github.event.head_commit.message == '/deploy sit' ||
           github.event.head_commit.message == '/deploy uat' ||
           github.event.head_commit.message == '/deploy sandbox'
@@ -485,7 +539,7 @@ jobs:
           tags: ${{ env.the_version }}
           create_repo: true
           dockerfile: ./docker/lambdaDockerfile
-          extra_build_args: --build-arg SOURCE=${{ env.pyproject_name }}==${{ env.the_version }}
+          extra_build_args: --build-arg DIST_PATH="dist/= --build-arg  SOURCE=${{ env.local_tig }}
 
 
       # #########################################################################
