--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -406,7 +406,10 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         if: |
           steps.pypi-test-publish.conclusion == 'success' ||
-          steps.pypi-publish.conclusion == 'success'
+          steps.pypi-publish.conclusion == 'success' ||
+          github.event.head_commit.message == '/deploy sit' ||
+          github.event.head_commit.message == '/deploy uat' ||
+          github.event.head_commit.message == '/deploy sandbox'
         id: meta
         uses: docker/metadata-action@v4
         with:
@@ -479,7 +482,7 @@ jobs:
 
     ## Local tig docker builds
 
-      - name: Build Local TIG and push Docker image
+      - name: Get Local Tig Build
         if: |
           github.event.head_commit.message == '/deploy sit' ||
           github.event.head_commit.message == '/deploy uat' ||
