--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -381,7 +381,10 @@ jobs:
       - name: Log in to the Container registry
         if: |
           steps.pypi-test-publish.conclusion == 'success' ||
-          steps.pypi-publish.conclusion == 'success'
+          steps.pypi-publish.conclusion == 'success'||
+          github.event.head_commit.message == '/deploy sit' ||
+          github.event.head_commit.message == '/deploy uat' ||
+          github.event.head_commit.message == '/deploy sandbox'
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
