--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -544,7 +544,7 @@ jobs:
           account_id: ${{ secrets[format('AWS_ACCOUNT_ID_CUMULUS_{0}', env.TARGET_ENV_UPPERCASE)] }}
           repo: podaac/tig
           region: us-west-2
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.version }}
           create_repo: true
           dockerfile: ./docker/lambdaDockerfile
           extra_build_args: --build-arg DIST_PATH="dist/" --build-arg  SOURCE=${{ env.local_tig }}
